# Todo-Full-Stack-Web-App

./: .gitignore  AUTHENTICATION_SETUP.md  CLAUDE.md
.claude/agents/: auth-agent.md  fastapi-backend-manager.md  neon-db-manager.md  nextjs-app-router-ui-builder.md
.specify/memory/: constitution.md
api/: index.py
backend/: .env.example  README.md  create_tables.py  debug_jwt.py  pyproject.toml  requirements.txt  reset_database.py  todo_app.db
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/routes/: __init__.py  auth.py  tasks.py
backend/src/auth/: middleware.py  models.py  utils.py
backend/src/database/: __init__.py  base.py  engine.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/services/: __init__.py  task_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/integration/test_api/: test_tasks.py
backend/tests/unit/auth/: test_login.py  test_registration.py  test_secure_api_access.py
frontend/: .env.example  README.md  auth.config.ts  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ClientHomePageContent.tsx  protected-route.tsx
frontend/contexts/: task-context.tsx
frontend/docs/: API_INTEGRATION.md  PERFORMANCE_OPTIMIZATION.md  SECURITY_AUDIT.md
frontend/hooks/: task-hooks.ts
frontend/providers/: react-query-provider.tsx
frontend/types/: auth.ts  task.ts
frontend/utils/: env-validation.ts
history/adr/: 001-authentication-architecture.md  002-technology-stack.md  (+2 more)
(+79 files in other folders)
